added a button (b) to start a new level

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,7 +5,7 @@ platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter="*.ico"
+include_filter="*.ico, *.txt"
 exclude_filter=""
 export_path="../../../Desktop/Game.exe"
 patch_list=PoolStringArray(  )
@@ -74,9 +74,9 @@ platform="Mac OSX"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.ico, *.txt"
 exclude_filter=""
-export_path=""
+export_path="../../../Desktop/Game.dmg"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -85,9 +85,9 @@ script_encryption_key=""
 
 custom_template/debug=""
 custom_template/release=""
-application/name=""
-application/info="Made with Godot Engine"
-application/icon=""
+application/name="Rush Minute"
+application/info="Nahumus productions"
+application/icon="res://Sprites/icon.png"
 application/identifier=""
 application/signature=""
 application/short_version="1.0"
@@ -107,7 +107,7 @@ platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.ico, *.txt"
 exclude_filter=""
 export_path="../../../Desktop/Game/Game.html"
 patch_list=PoolStringArray(  )
