added and changed

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -37,9 +37,9 @@ application/file_version="1.0.0"
 application/product_version="1.0.0"
 application/company_name="Nahumus Productions"
 application/product_name="Rush Minute"
-application/file_description=""
-application/copyright=""
-application/trademarks=""
+application/file_description="A Nice Game"
+application/copyright="Itay Nahum"
+application/trademarks="Nahumuss"
 
 [preset.1]
 
