--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.ico, *.txt"
 exclude_filter=""
-export_path="../../../Desktop/Game.exe"
+export_path="../../../downloads/Game.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
